--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BASE_URL='https://api.spoonacular.com/'
+VITE_BASE_URL='https://api.spoonacular.com'
+VITE_API_KEY='be42962eb7eb40d1bda26d368efd9a05'
