--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
